survey: Mostly finish Structured QA

--- a/qa.bib
+++ b/qa.bib
@@ -599,3 +599,10 @@ shareable analysis pipelines},
   year={2015},
   url={http://research.microsoft.com/pubs/244749/ACL15-STAGG.pdf}
 }
+
+@article{ELS-MART,
+  title={S-MART: Novel Tree-based Structured Learning Algorithms Applied to Tweet Entity Linking},
+  author={Yang, Yi and Chang, Ming-Wei},
+  year={2015},
+  url={http://www.anthology.aclweb.org/P/P15/P15-1049.pdf}
+}
