--- a/work.tex
+++ b/work.tex
@@ -8,6 +8,7 @@ research testbed and a practical system.
 The outcome of this work is the \textbf{YodaQA} system.%
 \footnote{Available open source at \url{https://github.com/brmson/yodaqa}
 under the Apache Software Licence 2.0.}
+\citep{YodaQAPoster2015,YodaQACLEF2015}
 
 \section{YodaQA Pipeline Architecture}
 \label{sec:yodaqaarch}
