survey: aux tasks; disable entity linking, no time

--- a/plan.tex
+++ b/plan.tex
@@ -31,7 +31,7 @@ Both my proposals aim at realistic user interaction,
 which brings in the first question ---
 \textbf{How to link question keywords to appropriate concepts?}
 That is, building a dataset and highly accurate solution for entity
-linking (as surveyed in Sec.~\ref{sec:entitylink}.
+linking. % (as surveyed in Sec.~\ref{sec:entitylink}.
 Preliminary results on the movies dataset show that spelling mismatches
 (both typos and interpunction variants) as well as disambiguation issues
 (linking ``Hobbit'' to the best concept depending on question,
