--- a/qa.bib
+++ b/qa.bib
@@ -606,3 +606,59 @@ shareable analysis pipelines},
   year={2015},
   url={http://www.anthology.aclweb.org/P/P15/P15-1049.pdf}
 }
+
+@article{QCSilvaSVM,
+  title={From symbolic to sub-symbolic information in question classification},
+  author={Silva, Joao and Coheur, Lu{\'\i}sa and Mendes, Ana Cristina and Wichert, Andreas},
+  journal={Artificial Intelligence Review},
+  volume={35},
+  number={2},
+  pages={137--154},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{SimpleQuestions,
+  author    = {Antoine Bordes and
+               Nicolas Usunier and
+               Sumit Chopra and
+               Jason Weston},
+  title     = {Large-scale Simple Question Answering with Memory Networks},
+  journal   = {CoRR},
+  volume    = {abs/1506.02075},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1506.02075},
+  timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/BordesUCW15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{ToyTasks,
+  author    = {Jason Weston and
+               Antoine Bordes and
+               Sumit Chopra and
+               Tomas Mikolov},
+  title     = {Towards AI-Complete Question Answering: {A} Set of Prerequisite Toy
+               Tasks},
+  journal   = {CoRR},
+  volume    = {abs/1502.05698},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1502.05698},
+  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/WestonBCM15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{MemNN,
+  author    = {Jason Weston and
+               Sumit Chopra and
+               Antoine Bordes},
+  title     = {Memory Networks},
+  journal   = {CoRR},
+  volume    = {abs/1410.3916},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1410.3916},
+  timestamp = {Sun, 02 Nov 2014 11:25:59 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/WestonCB14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
