--- a/qa.bib
+++ b/qa.bib
@@ -662,3 +662,12 @@ shareable analysis pipelines},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/WestonCB14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@inproceedings{word2vec,
+  title={Distributed representations of words and phrases and their compositionality},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  booktitle={Advances in neural information processing systems},
+  pages={3111--3119},
+  year={2013},
+  url={http://papers.nips.cc/paper/5021-di}
+}
