--- a/survey.tex
+++ b/survey.tex
@@ -666,25 +666,23 @@ is missing (e.g.\ in a context detailing an incident of the well-known personali
 \section{Vector Embeddings of Words}
 \label{sec:embeddings}
 
-TODO rewrite, expand.
-
 Recent progress in NLP has been marked mainly by the proliferation of
 so-called \textit{vector embeddings}, the most popular being called
-\textit{word2vec}.  This approach stems from the so-called \textit{distributional semantics}
+\textit{word2vec}. \citep{word2vec}
+This approach stems from the so-called \textit{distributional semantics}
 hypothesis, which posits that we can derive meanings of words purely
 from the context they tend to appear in.  Therefore, each word is
 associated with a list of $n$ real numbers (i.e.\ coordinates of
 an $n$-dimensional vector) and these numbers are derived automatically
 just from the context the words appear in.%
-\footnote{The \textit{word2vec} method uses an idea called \textit{multi-task learning}
-	which may be useful for us as well --- we try to learn
-	some easy-to-specify task and then we re-use the same model to
-	solve some much harder problems.  Here, the $n$ real numbers
+\footnote{The \textit{word2vec} method uses \textit{multi-task learning}
+	--- the $n$ real numbers
 	come out from training a classifier that predicts the most likely
 	next words to come given a context of (say, 100) preceding words;
 	this so-called \textit{language model} task is useful e.g.\ in
 	speech recognition or OCR.}
-The interesting property is that the automatically assigned numbers
+
+A popularly shown interesting property is that the automatically assigned numbers
 exhibit semantic properties in how they relate between words.
 For example, if we do arithmetics on these word vectors and try
 to compute e.g.\ $king + (woman - man)$, the nearest vector we reach
@@ -733,4 +731,5 @@ are popping up; this method became state-of-art for machine translation
 types of question answering \citep{QANTA,DefGen,ReadAndComprehend}%
 \footnote{The demo at \url{http://45.55.181.170/defgen/} is nice.}.
 One open problem is efficient composition of vector embeddings for
-common words with entities like numbers or proper names.
+common words with entities like numbers or proper names,
+or for complex sentences which might require segmentation.
