Disable some TODOs and raw pieces

--- a/intro.tex
+++ b/intro.tex
@@ -1,8 +1,6 @@
 \chapter{Introduction}
 \label{ch:intro}
 
-TODO some nice quote
-
 In this report, I would like to propose a doctoral thesis to write
 and defend at the Czech Technical University on the topic of question
 answering systems.
@@ -45,8 +43,6 @@ Thus, I consider an ``open domain'' general factoid question answering,
 rather than domain-specific applications, though keeping flexibility
 in this direction is certainly worthwhile.
 
-TODO some examples of questions and answers
-
 \section{Task Outline}
 
 Diverse QA system architectures have been proposed in the last 15 years,
@@ -78,8 +74,8 @@ the information retrieval on an external high-quality web search engine
 like Google or Bing (see e.g.\ the \textbf{AskMSR} system \citep{AskMSR}
 or many others).
 I make a point of relying purely on local information sources.%
-\footnote{However, as non-benchmarked extension, YodaQA also includes
-	Bing search as described in Sec.~\ref{sec:bing}.}
+ %\footnote{However, as non-benchmarked extension, YodaQA also includes
+%	Bing search as described in Sec.~\ref{sec:bing}.}
 While the task becomes noticeably harder,
 I believe the outcome is a more
 universal system that could be readily refocused on a specific domain
