--- a/work.tex
+++ b/work.tex
@@ -325,7 +325,7 @@ impact of its various components (hold-out testing).
 
 Our code is version tracked in a public GitHub repository
 \url{https://github.com/brmson/yodaqa}, and the experiments presented
-here are based on commit \texttt{TODO} (tagged as \texttt{v1.1}).
+here are based on tag \texttt{v1.2}.
 The quality of full-text search is co-determined by Solr version
 (we use 4.6.0) and models of the various NLP components which are brought
 in by DKPro version 1.7.0.
