--- a/odbstud.tex
+++ b/odbstud.tex
@@ -42,7 +42,7 @@
 
 \appendix
 \include{app-opt}
-\include{app-analysis}
+%\include{app-analysis}
 
 \bibliographystyle{plainnat}
 \bibliography{qa}
