Plan: Tweak cites

--- a/plan.tex
+++ b/plan.tex
@@ -22,7 +22,7 @@ and are working on YodaQA version for answering movie questions.%
 
 The second scenario aims to answer \textbf{prospectus questions}
 about contents of an isolated document like a product page,
-real estate offer or a usage manual.  Unlike the TODO \cite{MemNet},
+real estate offer or a usage manual.  Unlike non-factoid QA (Sec.~\ref{sec:nonfactoid}),
 the focus of this task is not answering logical riddles or following
 through with a story, but rather entity recognition and relationship
 extraction.
@@ -104,4 +104,4 @@ or references to entities, we need to answer
 to compound embeddings?}
 The current state of art does not seem to go beyond simple hacks like
 carrying bag-of-tokens along the embeddings and counting intersect size
-of that set when classifying relationships between two embedding \cite{Yu2014Deep}.
+of that set when classifying relationships between two embeddings \citep{Yu2014Deep}.
